--- a/biibiii_simulation/biibiii_slam/package.xml
+++ b/biibiii_simulation/biibiii_slam/package.xml
@@ -9,17 +9,17 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>cartographer_ros_msgs</build_depend>
+  <!-- <build_depend>cartographer_ros_msgs</build_depend> -->
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>sensor_msgs</build_depend>
 
-  <build_export_depend>cartographer_ros_msgs</build_export_depend>
+  <!-- <build_export_depend>cartographer_ros_msgs</build_export_depend> -->
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
 
-  <exec_depend>cartographer_ros_msgs</exec_depend>
+  <!-- <exec_depend>cartographer_ros_msgs</exec_depend> -->
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
