--- a/roscpp_tutorials_with_comment/cpp_publisher_and_subscriber/CMakeLists.txt
+++ b/roscpp_tutorials_with_comment/cpp_publisher_and_subscriber/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(publisher_and_subscriber)
+project(cpp_publisher_and_subscriber)
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
@@ -9,7 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES publisher_and_subscriber
+#  LIBRARIES cpp_publisher_and_subscriber
 #  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
@@ -22,3 +22,10 @@ include_directories(
 # include
   ${catkin_INCLUDE_DIRS}
 )
+
+add_executable(talker src/talker.cpp)
+target_link_libraries(talker ${catkin_LIBRARIES})
+
+add_executable(listener src/listener.cpp)
+target_link_libraries(listener ${catkin_LIBRARIES})
+
